fix family percentage